# Watcher-OS

./: .gitignore  README.md  flash_minimal.py  install.sh  install_to_sd.py  mock_control.py  pyproject.toml  requirements.txt
watcher/: __init__.py  __main__.py  camera.py  detector.py  engine.py  geolocate.py  main.py  serial_comm.py
